@@ -6,6 +6,7 @@ Users which contributed patches added to versions after 1.0:
 * CliffordAdams
 * DavidClaughton
 * DavidWall
+* GunnarH
 * GyPark
 * JuanMtnezPineda
 * MikeCastle
