@@ -6,6 +6,8 @@ Changes for bugfix release 1.0.5:
 * added patch DoPageLockMinorTweak
   contributed by JuanMtnezPineda
 * Allow "0" as page name if FreeLinks are allowed
+* fixed bug NumericDatesNeedZeroPadding
+  fix contributed by GunnarH
 
 Changes for bugfix release 1.0.4 (December 1, 2007):
 
